--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
 
     #listaItensTable{width:100%;table-layout:auto;font-size:.9rem}
     #listaItensTable th,#listaItensTable td{padding:4px 2px; border:1px solid #e5e7eb; word-wrap: break-word; text-align: center;}
-    #listaItensTable th:first-child, #listaItensTable td:first-child { text-align: left; padding-left: 4px;} /* Código à esquerda */
-    #listaItensTable td:nth-child(2), #listaItensTable td:nth-child(3) { text-align: right; padding-right: 4px;} /* Pesos à direita */
-
+    #listaItensTable th:first-child, #listaItensTable td:first-child { text-align: left; padding-left: 4px;}
+    #listaItensTable td:nth-child(2), #listaItensTable td:nth-child(3) { text-align: right; padding-right: 4px;}
 
     @media (min-width: 640px) { /* sm: */
       #listaItensTable th,#listaItensTable td{padding:6px 4px;}
     }
-
 
     #installPwaButton{display:none}
     .tara-button{padding:.5rem .75rem; border: 1px solid #ccc; border-radius: 0.25rem; margin: 0.25rem; cursor: pointer; background-color: #f9f9f9; transition: background-color 0.2s ease, border-color 0.2s ease;}
@@ -40,7 +38,7 @@
     .status-info { background-color: #6b7280; }
     .status-success { background-color: #10b981; }
     .status-error { background-color: #ef4444; }
-    .status-sending { background-color: #3b82f6; }
+    .status-sending { background-color: #3b82f6; } /* Azul para enviando */
 
     .modal-overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.5); z-index: 999; display: none;}
     .modal-content { position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 2rem; border-radius: 0.5rem; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); z-index: 1000; width: 90%; max-width: 400px; display: none;}
@@ -48,27 +46,41 @@
     .modal-close-button { position: absolute; top: 0.5rem; right: 0.75rem; font-size: 1.5rem; color: #6b7280; cursor: pointer; background: none; border: none;}
     .modal-close-button:hover { color: #ef4444; }
 
-    /* Estilo para campo preenchido automaticamente */
-    .input-auto-filled { background-color: #eff6ff; /* Azul bem claro Tailwind blue-50 */ border-color: #93c5fd; /* Borda azul clara Tailwind blue-300 */}
+    .input-auto-filled { background-color: #eff6ff; border-color: #93c5fd; }
 
-    /* Barra de Progresso */
+    /* Barra de Progresso - COR ALTERADA PARA VERDE */
     #progressBarContainer { width: 100%; background-color: #e5e7eb; border-radius: 0.25rem; overflow: hidden; margin-top: 0.5rem; height: 10px; display: none;}
-    #progressBar { width: 0%; height: 100%; background-color: #3b82f6; transition: width 0.3s ease-in-out;}
+    #progressBar { width: 0%; height: 100%; background-color: #22c55e; /* Verde (Tailwind green-500) */ transition: width 0.3s ease-in-out;}
 
-    /* Agrupamento Visual */
     .form-group { border: 1px solid #e5e7eb; padding: 1rem; border-radius: 0.375rem; margin-bottom: 1rem; }
     .form-group-title { font-weight: 600; color: #4b5563; margin-bottom: 0.75rem; display: block; font-size: 1.1rem;}
 
-    /* Validação de Campo */
-    .input-error { border-color: #ef4444 !important; /* Vermelho para erro */ }
-    .error-message { color: #ef4444; font-size: 0.75rem; margin-top: 0.25rem; display: block; min-height: 1rem; /* Para evitar que o layout pule */}
+    .input-error { border-color: #ef4444 !important; }
+    .error-message { color: #ef4444; font-size: 0.75rem; margin-top: 0.25rem; display: block; min-height: 1rem; }
 
-    /* Animação Fade Out para exclusão */
     @keyframes fadeOut { from { opacity: 1; } to { opacity: 0; transform: scale(0.95); } }
     .fade-out { animation: fadeOut 0.3s ease-out forwards; }
 
-    /* Ícone de status de envio na tabela */
     .item-status-icon { margin-left: 5px; }
+
+    /* Estilo para Nome do Produto Display - ALTERADO */
+    #nomeProdutoDisplay {
+      margin-top: 0.25rem;
+      padding: 0.5rem 0.75rem; /* Similar ao padding de input */
+      background-color: #f3f4f6; /* Cinza claro (Tailwind gray-100) */
+      border: 1px solid #e5e7eb; /* Borda sutil (Tailwind gray-200) */
+      border-radius: 0.25rem;
+      font-style: italic;
+      color: #4b5563; /* Cinza escuro (Tailwind gray-600) */
+      min-height: 2.5rem; /* Altura similar a um input com padding */
+      display: flex;
+      align-items: center;
+    }
+    #nomeProdutoDisplay:empty::before {
+        content: "-"; /* Placeholder se vazio */
+        color: #9ca3af; /* Cinza mais claro (Tailwind gray-400) */
+    }
+
   </style>
 </head>
 <body class="bg-gray-100 p-2 sm:p-4 font-sans">
@@ -98,10 +110,11 @@
 
     <div class="form-group">
       <span class="form-group-title">Detalhes do Produto</span>
-      <div> <label for="codigoProduto" class="block text-sm font-medium text-gray-700">Código do Produto</label>
+      <div>
+        <label for="codigoProduto" class="block text-sm font-medium text-gray-700">Código do Produto</label>
         <input type="text" id="codigoProduto" placeholder="Código"
                class="mt-1 block w-full border border-gray-300 p-2 rounded" enterkeyhint="next">
-        <div id="nomeProdutoDisplay" class="mt-1 text-sm text-gray-600 h-5"></div>
+        <div id="nomeProdutoDisplay"></div>
         <div id="codigoProdutoError" class="error-message"></div>
       </div>
     </div>
@@ -117,7 +130,8 @@
                         class="mt-1 block w-full border border-gray-300 p-2 rounded" enterkeyhint="next">
                 <div id="pesoTaraKgError" class="error-message"></div>
             </div>
-            <div> <label class="block text-sm font-medium text-gray-700 mb-1">Tara Rápida (Potes)</label>
+            <div>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Tara Rápida (Potes)</label>
                 <div id="botoesTaraContainer" class="flex flex-wrap">
                     <span class="text-gray-500 text-sm">Carregando potes...</span>
                 </div>
@@ -139,13 +153,11 @@
         </div>
     </div>
 
-
     <button id="registrarItemBtn"
             class="w-full bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded disabled:opacity-50 mb-2">
        <i class="fas fa-plus mr-2"></i> <span id="textoBotaoRegistrar">Registrar Item Localmente</span>
     </button>
     <div id="calculoPesoLiquidoDisplay" class="text-sm text-center text-gray-600 mb-4 h-5"></div>
-
 
     <div id="statusEnvio" class="status-base mt-4">
         <span id="statusMensagem"></span>
@@ -153,7 +165,6 @@
             <div id="progressBar"></div>
         </div>
     </div>
-
 
     <div class="mt-8">
       <div class="flex justify-between items-center mb-3">
